                        Dear Emacs, please make this -*-Text-*- mode!

                CHANGES IN tm VERSION 0.5-2

SIGNIFICANT USER-VISIBLE CHANGES

    o   The function termFreq() which is used for building a
        term-document matrix now uses a whitespace oriented tokenizer
        as default.

NEW FEATURES

    o   A combine method for merging multiple term-document matrices
        was added (c.TermDocumentMatrix()).

    o   The function termFreq() has now an option to remove
        punctuation characters.

DEPRECATED & DEFUNCT

    o   Following functions have been removed:

          CSVSource()     (use DataframeSource(read.csv(..., stringsAsFactors = FALSE)) instead), and
          TermDocMatrix() (use DocumentTermMatrix() instead).

BUG FIXES

    o   removeWords() no longer skips words at the beginning or the end
        of a line. Reported by Mark Kimpel.

                CHANGES IN tm VERSION 0.5-1

BUG FIXES

    o   preprocessReut21578XML() no longer generates invalid file names.

                CHANGES IN tm VERSION 0.5

SIGNIFICANT USER-VISIBLE CHANGES

    o   All classes, functions, and generics are reimplemented using
        the S3 class system.

    o   Following functions have been renamed:

          activateCluster()   to tm_startCluster()     ,
          asPlain()           to as.PlainTextDocument(),
          deactivateCluster() to tm_stopCluster()      ,
          tmFilter()          to tm_filter()           ,
          tmIndex()           to tm_index()            ,
          tmIntersect()       to tm_intersect()        , and
          tmMap()             to tm_map()              .

    o   Mail handling functionality is factored out to the
        tm.plugin.mail package.

DEPRECATED & DEFUNCT

    o   Following functions have been removed:

          tmTolower()         (use tolower() instead), and
          replacePatterns()   (use gsub()    instead).

                CHANGES IN tm VERSION 0.4

SIGNIFICANT USER-VISIBLE CHANGES
