@@ -46,6 +46,7 @@ export("as.PlainTextDocument",
        "readReut21578XML",
        "readReut21578XMLasPlain",
        "readRCV1",
+       "readRCV1asPlain",
        "readGmane",
        "readPDF",
        "readTabular",
