@@ -2,7 +2,7 @@
 ## Reader
 
 getReaders <- function()
-    c("readDOC", "readGmane", "readPDF", "readReut21578XML", "readReut21578XMLasPlain", "readPlain", "readRCV1", "readTabular")
+    c("readDOC", "readGmane", "readPDF", "readReut21578XML", "readReut21578XMLasPlain", "readPlain", "readRCV1", "readRCV1asPlain", "readTabular")
 
 prepareReader <- function(readerControl, defaultReader = NULL, ...) {
     if (is.null(readerControl$reader))
@@ -82,6 +82,18 @@ readRCV1 <- readXML(spec = list(Author = list("unevaluated", ""),
                     Publisher = list("attribute", "/newsitem/metadata/dc[@element='dc.publisher']/@value"),
                     Topics = list("attribute", "/newsitem/metadata/codes[@class='bip:topics:1.0']/code/@code")),
                     doc = RCV1Document())
+
+readRCV1asPlain <- readXML(spec = list(Author = list("unevaluated", ""),
+                           Content = list("node", "/newsitem/text"),
+                           DateTimeStamp = list("function", function(node)
+                           as.POSIXlt(as.character(XML::getNodeSet(node, "/newsitem/@date")), tz = "GMT")),
+                           Description = list("unevaluated", ""),
+                           Heading = list("node", "/newsitem/title"),
+                           ID = list("attribute", "/newsitem/@itemid"),
+                           Origin = list("unevaluated", "Reuters Corpus Volume 1 XML"),
+                           Publisher = list("attribute", "/newsitem/metadata/dc[@element='dc.publisher']/@value"),
+                           Topics = list("attribute", "/newsitem/metadata/codes[@class='bip:topics:1.0']/code/@code")),
+                           doc = PlainTextDocument())
 
 # # readDOC needs antiword installed to be able to extract the text
 readDOC <- FunctionGenerator(function(AntiwordOptions = "", ...) {
