@@ -1,5 +1,12 @@
                         Dear Emacs, please make this -*-Text-*- mode!
 
+                CHANGES IN tm VERSION 0.5-3
+
+NEW FEATURES
+
+    o The reader function readRCV1asPlain() was added and combines the
+      functionality of readRCV1() and as.PlainTextDocument().
+
                 CHANGES IN tm VERSION 0.5-2
 
 SIGNIFICANT USER-VISIBLE CHANGES
